# PT-FullStackSenior-DRF-MICROSERVICIOS-REACT

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.claude/skills/check/: SKILL.md
.claude/skills/compose/: SKILL.md
.claude/skills/scaffold-service/: SKILL.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: cart.ts  client.ts  errors.ts  orders.ts  products.ts
frontend/src/components/: CartIcon.tsx  CartItemRow.tsx  DeleteConfirmModal.tsx  ErrorBanner.tsx  Loader.tsx  Navbar.tsx  Pagination.tsx  ProductCard.tsx  ProductFilters.tsx  ProductModal.tsx  ProductTable.tsx  (+1 more)
gateway/: nginx.conf
services/cart/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements.txt  ruff.toml
services/orders/: Dockerfile  pyproject.toml  requirements.txt  ruff.toml
services/orders/config/: settings.py  urls.py
services/orders/orders/: admin.py  clients.py  services.py  urls.py
services/orders/orders/management/commands/: publish_outbox.py
services/orders/orders/migrations/: 0001_initial.py  0002_outboxevent.py
services/orders/orders/models/: __init__.py  base.py  order.py  order_item.py  outbox_event.py
services/orders/orders/serializers/: __init__.py  order.py
services/orders/orders/tests/: test_api.py  test_outbox.py
services/orders/orders/views/: __init__.py  order.py
services/orders/shared/: events.py  throttles.py
services/products/: Dockerfile  pyproject.toml  requirements.txt  ruff.toml
(+53 files in other folders)
