[tool.poetry]
name = "orders-service"
version = "0.1.0"
description = "Orders microservice (Django REST Framework)"
authors = ["Jose Luis Echemendia <echemendiajoseluis@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.15"
psycopg = {extras = ["binary"], version = "^3.2"}
dj-database-url = "^2.2"
django-cors-headers = "^4.4"
django-filter = "^24.0"
pika = "^1.3"
gunicorn = "^23.0"
python-decouple = "^3.8"
requests = "^2.32"
drf-spectacular = ">=0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-django = "^4.9"
factory-boy = "^3.3"
responses = "^0.25"
ruff = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
addopts = "-v"
